--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
 safety = "^2.3.5"
 version-incrementor = "^1.5.0"
+pytz = "^2022.7"
 
 [build-system]
 requires = ["poetry-core"]
