--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ aws-lambda-context = "^1.1.0"
 aws-lambda-powertools = "^2.5.0"
 boto3 = "^1.26.45"
 python = "^3.9"
+# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
+urllib3 = ">=1.25.4,<1.27"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "^1.7.4"
