--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ pre-commit = "^2.21.0"
 pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
 version-incrementor = "^1.5.0"
+reorder-python-imports = "^3.12.0"
 
 [build-system]
 requires = ["poetry-core"]
