TEL-5640 Pull python image from Artifactory

--- a/buildspec_pr.yml
+++ b/buildspec_pr.yml
@@ -14,7 +14,7 @@ phases:
       - nohup /usr/local/bin/dockerd --host=unix:///var/run/docker.sock --host=tcp://127.0.0.1:2375 --storage-driver=overlay2 &
       - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
       - docker images
-      - docker pull python:3.9.20-slim-bookworm
+      - docker pull dockerhub.tax.service.gov.uk/python:3.9.20-slim-bookworm
       - make setup
   build:
     commands:
