--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,9 @@ pytest-cov = "^4.0.0"
 version-incrementor = "^1.5.0"
 reorder-python-imports = "^3.12.0"
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
